# termcad

./: CLAUDE.md  Cargo.toml
examples/: boot_sequence.json  cyberspace.json  grid_flythrough.json  minimal.json  orbit.json  pulsar.json  signal_beacon.json  signal_lost.json  signal_pulse.json  signal_sync.json  spin_test.json  spinning_cube.json  text_terminal.json
src/: main.rs
src/output/: frames.rs  gif.rs  mod.rs
src/primitives/: axes.rs  geometry.rs  glyph.rs  grid.rs  line.rs  mod.rs  particles.rs  wireframe.rs
src/render/: camera.rs  mod.rs  pipeline.rs  post.rs
src/scene/: expression.rs  mod.rs  schema.rs  templates.rs  validate.rs
src/shaders/: line.wgsl  post.wgsl
