[package]
name = "termcad"
version = "0.1.0"
edition = "2024"
description = "Terminal CAD aesthetic GIF generator"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wgpu = "24"
pollster = "0.4"
image = "0.25"
bytemuck = { version = "1", features = ["derive"] }
evalexpr = "11"
thiserror = "2"
fontdue = "0.9"
dirs = "5"

[[bin]]
name = "termcad"
path = "src/main.rs"
